--- a/main.html
+++ b/main.html
@@ -10,7 +10,9 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-
+<p id="yellow">para1</p>
+	<p id="red" >Para2</p>
+	<p id="green">Para3</p>
 </body>
 
 </html>
